<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="ru">
    <string name="app_name">SketchIt</string>

    <string name="title_login_input">Имя пользователя или почта</string>
    <string name="title_username_input">Имя пользователя</string>
    <string name="title_email_input">Почта</string>
    <string name="title_password_input">Пароль</string>
    <string name="title_variant">Вариант</string>
    <string name="title_rules">Правила</string>
    <string name="titile_variant_chat">Варианты игроков</string>
    <string name="title_private_game">Приватная игра</string>
    <string name="title_private_game_id">Идентификатор комнаты:</string>
    <string name="title_private_game_user_list">Список игроков:</string>
    <string name="title_private_game_join">Подключение к приватной игре</string>
    <string name="title_private_game_key">Ключ игры</string>
    <string name="title_waiting_game">Ожидание начала игры…</string>

    <string name="action_login">Войти</string>
    <string name="action_register">Зарегистрироваться</string>
    <string name="action_go_to_registration">Зарегистрироваться</string>
    <string name="action_go_to_login">Уже есть аккаунт? Войти</string>
    <string name="action_start_game_room_finder">Искать комнату</string>
    <string name="action_logout">Выйти из аккаунта</string>
    <string name="action_game_rules">Правила игры</string>
    <string name="action_start_private_room">Приватная игра</string>
    <string name="action_join">Присоединиться</string>
    <string name="action_create">Создать</string>
    <string name="action_start_game">Начать игру</string>
    <string name="action_back">Назад</string>

    <string name="message_win">Вы отгадали!</string>
    <string name="message_game_end">Игра закончилась</string>

    <string name="message_error_login_invalid_user_data">Неверный логин или пароль</string>
    <string name="message_error_user_name_or_emeail_is_not_free">Имя пользователя или почта заняты</string>
    <string name="message_error_cannt_send_request">Не удаётся получить ответ сервера</string>
    <string name="message_error_register_username_not_valid">Имя пользователя может содержать только буквы и должно иметь длину от 4 до 20 символов</string>
    <string name="message_error_register_password_is_short">Пароль должен быть не меньше 7 символов</string>
    <string name="message_error_register_password_is_long">Пароль должен быть не более 20 символов</string>
    <string name="message_error_register_password_need_spacial_symbols">Пароль должен содержать хотя бы один специальный символ</string>
    <string name="message_error_register_password_need_number">Пароль должен содержать хотя бы одну цифру</string>
    <string name="message_error_register_password_need_char">Пароль должен содержать хотя бы одну букву</string>
    <string name="message_error_register_password_have_spaces">Пароль должен содержать хотя бы одну букву</string>
    <string name="message_error_register_email_is_now_valid">Введите корректный email</string>
    <string name="message_error_cant_auto_login">Не получается войти в аккаунт</string>
    <string name="message_error_cant_login">Не удаётся авторизоваться на сервере. Повторите попытку позже</string>
    <string name="message_rules">Для того, что бы начать игру надо нажать «найти комнату», после этого начнется ожидание остальных игроков. Когда все пять игроков будут собраны в одной комнате, начнется игра. В каждом раунде, включая первый, будет выбран один ведущий - игрок, который будет изображать загаданное слово.
Если Вы ведущий, Ваша задача изобразить загаданное слово за 90 секунд. Время и слово будут видны Вам сверху игрового поля.
Если Вы угадывающий игрок, Ваша задача писать Ваши варианты загаданного слова в чате слева.
Когда слово будет угадано, на экране появится оповещение об этом. Если же слово угадать ни у одного из игроков не удалось, появится оповещение с правильным ответом.
По прошествии пяти раундов игра завершится.</string>
    <string name="message_waiting_for_room">Поиск команды, ожидайте…</string>

    <string name="message_your_varint_right">Вы отгадали!</string>
    <string name="message_right_answer">Правильный ответ:</string>
    <string name="message_time_is_over">Время вышло</string>
    <string name="message_word_guessed">Слово отгадано</string>
    <string name="message_remaining_time_for_start_game">Игра продолжится через:</string>

    <string name="message_invalid_private_game_token">Неверные индефикатор игры</string>

    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

    <string name="content_description_brush">Кисточка</string>
    <string name="content_description_erase">Ластик</string>
    <string name="content_description_color">Цвет</string>
    <string name="content_description_enter_variant">Введите вариант</string>
</resources>