<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/small_brush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:contentDescription="@string/sml"
            android:src="@drawable/small"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/medium_brush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:contentDescription="@string/med"
            android:src="@drawable/medium"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/large_brush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:contentDescription="@string/lrg"
            android:src="@drawable/large" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>