<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivateRoomMenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_select_action_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_private_game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_private_game"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/text_view_private_game_title"
            app:layout_constraintStart_toStartOf="@+id/text_view_private_game_title"
            app:layout_constraintTop_toBottomOf="@+id/text_view_private_game_title">

            <Button
                android:id="@+id/button_create_private_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_create" />

            <Button
                android:id="@+id/button_join_private_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_join" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gentle_white_dark"
        android:visibility="invisible">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_private_game_manage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/text_title_game_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="fill"
            android:text="@string/title_private_game_id"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_game_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/text_title_game_id"
            app:layout_constraintStart_toStartOf="@+id/text_title_game_id"
            app:layout_constraintTop_toBottomOf="@+id/text_title_game_id" />

        <TextView
            android:id="@+id/text_title_user_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_private_game_user_list"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/text_title_game_id"
            app:layout_constraintStart_toStartOf="@+id/text_title_game_id"
            app:layout_constraintTop_toBottomOf="@+id/text_game_token" />

        <ListView
            android:id="@+id/list_users"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_title_game_id"
            app:layout_constraintStart_toStartOf="@+id/text_title_game_id"
            app:layout_constraintTop_toBottomOf="@+id/text_title_user_list">

        </ListView>

        <Button
            android:id="@+id/button_start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/action_start_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/list_users"
            app:layout_constraintTop_toBottomOf="@+id/text_title_user_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_join_private_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_private_game_join_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_private_game_join"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_game_token_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/title_private_game_key"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/text_private_game_join_title"
            app:layout_constraintStart_toStartOf="@+id/text_private_game_join_title"
            app:layout_constraintTop_toBottomOf="@+id/text_private_game_join_title" />

        <Button
            android:id="@+id/button_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/action_join"
            app:layout_constraintEnd_toEndOf="@+id/text_game_token_input"
            app:layout_constraintStart_toStartOf="@+id/text_game_token_input"
            app:layout_constraintTop_toBottomOf="@+id/text_game_token_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>