<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="-50dp"
        android:importantForAccessibility="no"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_input_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout_input_fields"
        app:srcCompat="@drawable/ic_stickman_with_question" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/layout_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_buttons"
        app:layout_constraintTop_toTopOf="@+id/layout_buttons"
        app:srcCompat="@drawable/ic_stickman_pointing_with_finger" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/design_default_color_error"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_input_fields"
        app:layout_constraintEnd_toEndOf="@+id/layout_input_fields"
        app:layout_constraintStart_toStartOf="@+id/layout_input_fields"
        tools:ignore="VisualLintBounds" />

    <LinearLayout
        android:id="@+id/layout_input_fields"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/title_username_input"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/title_email_input"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/title_password_input"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/layout_input_fields"
        app:layout_constraintStart_toEndOf="@+id/layout_input_fields"
        app:layout_constraintTop_toTopOf="@+id/layout_input_fields"
        tools:ignore="VisualLintBounds">

        <Button
            android:id="@+id/button_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/action_register"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_go_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/action_go_to_login"
            android:textAllCaps="false"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>