<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.SketchIt"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayoutInputs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInputs"
        app:srcCompat="@drawable/ic_stickman_drawing" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:importantForAccessibility="no"
        android:scaleType="centerInside"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutButtons"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_stickman_thinking_2" />

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:autoSizeMaxTextSize="60sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/text_error_message"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutButtons"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutInputs"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutInputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:gravity="center_horizontal"
            android:hint="@string/title_login_input"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:gravity="center_horizontal"
            android:hint="@string/title_password_input"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/design_default_color_error"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutInputs"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutInputs"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutInputs" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutInputs"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutInputs"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutInputs"
        tools:ignore="VisualLintBounds">

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/action_login"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_go_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/action_go_to_registration"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:theme="@style/Theme.SketchIt" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ProgressBar
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>